updated task UI