@@ -3,7 +3,7 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.beryx.jlink' version '2.26.0'
 }
 
 group 'org.todo'
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'org.todo.todolist'
-    mainClass = 'org.todo.todolist.Main'
+    mainModule = 'org.todo.todolist' // Your module name
+    mainClass = 'org.todo.todolist.Main' // Your main class
 }
 
 javafx {
@@ -35,14 +35,12 @@ javafx {
 }
 
 dependencies {
-    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
-        exclude(group: 'org.openjfx')
-    }
+    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
     implementation 'org.openjfx:javafx-controls:22.0.1'
-    implementation "org.openjfx:javafx-fxml:22.0.1"
+    implementation 'org.openjfx:javafx-fxml:22.0.1'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 test {
@@ -50,25 +48,22 @@ test {
 }
 
 jlink {
-    jlink {
-        imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-        launcher {
-            name = 'app'
-        }
- // Add JavaFX modules explicitly
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    // Add necessary JavaFX modules
+    addOptions('--add-modules', 'javafx.controls,javafx.fxml')
+
+    launcher {
+        name = 'FocusFlow'
+    }
+
+    jpackage {
+        appVersion = '1.0'
+        imageName = 'FocusFlow' // Name of the runtime image
+        installerName = 'FocusFlowSetup' // Name of the installer
+        installerType = 'exe' // Installer type for Windows
+        description = 'FocusFlow Task Manager'
+        //appIcon = file('src/main/resources/icons/app.ico') // Optional: Add your icon
+        jvmArgs = ['-Xmx512m'] // Optional: JVM arguments
     }
 }
-
-jlinkZip {
-    group = 'distribution'
-}
-tasks.jar {
-    manifest {
-        attributes(
-                'Main-Class': 'org.todo.todolist.Main',  // The main class for your application
-                'Main-Module': 'org.todo.todolist'
-        )
-    }
-}
-
